UX/UI Improvement: Rounding corners in textfield and imageView

--- a/StopGame/Base.lproj/LaunchScreen.storyboard
+++ b/StopGame/Base.lproj/LaunchScreen.storyboard
@@ -23,7 +23,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.98039215690000003" green="0.95294117649999999" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="BackgroundColor"/>
                         <constraints>
                             <constraint firstItem="loL-w6-TFj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Xbn-PJ-PGY"/>
                             <constraint firstItem="loL-w6-TFj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="uUG-gj-vYV"/>
@@ -35,4 +35,9 @@
             <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="BackgroundColor">
+            <color red="0.98039215686274506" green="0.95294117647058818" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
